# django-bangla-admin

./: .gitignore  CHANGELOG.md  DJANGO_BANGLA_ADMIN_BUILD.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
django_bangla_admin/: __init__.py  admin.py  apps.py  conf.py  context_processors.py  i18n.py  icons.py  menu.py  middleware.py  mixins.py  settings.py  sites.py  urls.py  views.py
django_bangla_admin/dashboard/: __init__.py  base.py  data.py  default.py  registry.py
django_bangla_admin/locale/bn/LC_MESSAGES/: django.mo  django.po
django_bangla_admin/locale/en/LC_MESSAGES/: django.mo  django.po
django_bangla_admin/static/django_bangla_admin/css/: bangla-admin.css
django_bangla_admin/static/django_bangla_admin/js/: bangla-admin.js  charts.js
django_bangla_admin/templates/admin/: base.html  base_site.html  change_list.html  index.html  login.html
django_bangla_admin/templates/django_bangla_admin/partials/: _activity_feed.html  _breadcrumbs.html  _chart.html  _content.html  _result_list.html  _sidebar.html  _stat_card.html  _toasts.html  _topbar.html  _widget.html
django_bangla_admin/templatetags/: ba_i18n.py  ba_tags.py
example/: manage.py
example/example_project/: settings.py  urls.py
example/shop/: admin.py  apps.py  models.py
example/shop/management/commands/: seed_demo.py
example/shop/migrations/: 0001_initial.py
scripts/: compile_messages.py
tests/: settings.py  test_config.py  test_config_charts.py  test_i18n.py  test_menu.py  test_views.py  urls.py
