[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-bangla-admin"
version = "0.1.0"
description = "A free, Bangladeshi Django admin theme & dashboard — HTMX SPA feel, live Chart.js dashboards, Bangla ⇄ English."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ifte Samul Ohy", email = "iftesamulohy@gmail.com" }]
keywords = ["django", "admin", "theme", "dashboard", "bangla", "bengali", "htmx", "jazzmin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Bengali",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["Django>=4.2"]

[project.urls]
Homepage = "https://github.com/iftesamulohy/django-bangla-admin"
Repository = "https://github.com/iftesamulohy/django-bangla-admin"
Author = "https://iftesamulohy.com"

[tool.setuptools.packages.find]
include = ["django_bangla_admin*"]
exclude = ["example*"]

[tool.setuptools.package-data]
django_bangla_admin = [
    "static/**/*",
    "templates/**/*",
    "locale/**/*",
]
